[build-system]
requires = ["setuptools>=77.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# including this section enables version inference

[project]
name = "obonet"
authors = [{name = "Daniel Himmelstein", email = "daniel.himmelstein@gmail.com"}]
license = "BSD-2-Clause-Patent"
license-files = ["LICENSE.md"]
description = "Parse OBO formatted ontologies into networkx"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "obo",
    "ontology",
    "networkx",
    "parser",
    "network",
]
requires-python = ">=3.10"
dependencies = ["networkx"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
Homepage = "https://github.com/dhimmel/obonet"
Source = "https://github.com/dhimmel/obonet"
Tracker = "https://github.com/dhimmel/obonet/issues"

[project.scripts]
obonet = "obonet.cli:main"

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "prek",
    "pytest",
]

[tool.setuptools]
packages = ["obonet"]
zip-safe = false
include-package-data = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # line-too-long
]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_decorators = false


[[tool.mypy.overrides]]
module = [
    "networkx",
    "networkx.*",
    "pkg_resources",
    "pkg_resources.*",
    "pytest",
    "pytest.*",
    "_pytest",
    "_pytest.*",
]
ignore_missing_imports = true
