[metadata]
name = obonet
author = Daniel Himmelstein
author_email = daniel.himmelstein@gmail.com
license = BSD-2-Clause-Patent
license_file = LICENSE.md
description =  Parse OBO formatted ontologies into networkx
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/dhimmel/obonet
project_urls =
    Source = https://github.com/dhimmel/obonet
    Tracker = https://github.com/dhimmel/obonet/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    # "License :: OSI Approved :: BSD 2-Clause Plus Patent License (BSD-2-Clause-Patent)",
    # not a valid classifier. see https://github.com/pypa/trove-classifiers/issues/17
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    obo
    ontology
    networkx
    parser
    network

[options]
packages = obonet
zip_safe = False
include_package_data = True
python_requires = >=3
install_requires =
    networkx

[options.extras_require]
dev =
    pre-commit
    pytest

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy-networkx.*,setuptools.*,pytest.*,_pytest.*]
ignore_missing_imports = True
[mypy-*.tests.*]
disallow_untyped_defs = False
disallow_untyped_decorators = False
